Added SIMD autodetection to shellscripts and java; simd flag should no longer be necessary but can be disabled with simd=f.  Fixed FileFormat issues of forcing file reads and changing format from known to unknown.  Added detection logic for headerless sam files.